# diffusion-renderer

./: .gitignore  README.md  export_gbuffers.py  main.py  pyproject.toml  render_forward.py  render_inverse.py  render_zprj.py  requirements.txt
configs/: xrgb_inference.yaml
examples/: vtk_render.py
utils/: utils_render.py
